--- a/src/app/points/points.component.html
+++ b/src/app/points/points.component.html
@@ -1,5 +1,5 @@
 <ul *ngIf="playersData.length > 0" class="players_pointsboard">
-  <li *ngFor="let playerName of playersData; let i = index" [class]="{'player_item':true, 'player--active': currentPlayer == i}" id="player--{{i}}">
+  <li *ngFor="let playerName of playersData; let i = index" [class]="{'player_item':true, 'player--active': gameData.player == i}" id="player--{{i}}">
       <span class="player__name">{{ playerName.name }}</span>
       <span class="player__points">0</span>
   </li>
