--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -14,12 +14,17 @@
 
   <div *ngIf="gameOn" class="game-board__rounds">
     <p>Round: {{ gameData.round }}</p>
+    <p>Player: {{ gameData.player }}</p>
+    <p>Last Player: {{ gameData.lastPlayer }}</p>
   </div>
 
   <div *ngIf="gameOn" class="game-board__actions">
+    {{ gameData | json }}
     <button *ngIf="gameData.round < 1" class="ic_button" (click)="firstRoll()">Start</button>
 
-    <button *ngIf="gameData.round > 0" class="ic_button" (click)="roll()">Roll</button>
+    <button *ngIf="gameData.player !== gameData.lastPlayer" class="ic_button" (click)="newPlayerRoll(gameData.player, gameData.player)">Roll New Player</button>
+    <button *ngIf="gameData.round > 0 && gameData.player === gameData.lastPlayer" class="ic_button" (click)="roll(gameData.player, gameData.lastPlayer)">Roll</button>
+
     <button *ngIf="gameData.round > 0" class="ic_button" (click)="settleDown()">Settle down</button>
   </div>
 </div>
