Refactor nextPlayer logic. Add playerCanSettleDown check

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -23,9 +23,9 @@
     <!-- {{ gameData | json }} -->
     <button *ngIf="gameData.round < 1" class="ic_button" (click)="firstRoll()">Start</button>
 
-    <button *ngIf="gameData.player !== gameData.lastPlayer" class="ic_button" (click)="nextPlayerRoll(gameData.player, gameData.player)">Next Player Roll</button>
-    <button *ngIf="gameData.round > 0 && gameData.player === gameData.lastPlayer" class="ic_button" (click)="roll(gameData.player, gameData.lastPlayer)">Roll</button>
+    <button *ngIf="gameData.player !== gameData.lastPlayer" class="ic_button" (click)="nextPlayerRoll()">Next Player Roll</button>
+    <button *ngIf="gameData.round > 0 && gameData.player === gameData.lastPlayer" class="ic_button" (click)="roll()">Roll</button>
 
-    <button *ngIf="gameData.round > 0" class="ic_button" (click)="settleDown()">Settle down</button>
+    <button *ngIf="data.playerCanSettleDown()" class="ic_button" (click)="settleDown()">Settle down</button>
   </div>
 </div>
