--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -17,6 +17,7 @@
     <p>Player: {{ gameData.player }}</p>
     <p>Last Player: {{ gameData.lastPlayer }}</p>
     <p>Skull Island: {{ gameData.skullIsland }}</p>
+    <p>DicePool: {{ gameData.lockedDice | json }}</p>
   </div>
 
   <div *ngIf="gameOn" class="game-board__actions">
@@ -24,6 +25,7 @@
     <button *ngIf="gameData.round < 1" class="ic_button" (click)="firstRoll()">Start</button>
 
     <button *ngIf="gameData.player !== gameData.lastPlayer" class="ic_button" (click)="nextPlayerRoll()">Next Player Roll</button>
+
     <button *ngIf="gameData.round > 0 && gameData.player === gameData.lastPlayer" class="ic_button" (click)="roll()">Roll</button>
 
     <button *ngIf="data.playerCanSettleDown()" class="ic_button" (click)="settleDown()">Settle down</button>
