Refactor after player's first roll for skull island / round over check

--- a/src/app/game-board/game-board.component.html
+++ b/src/app/game-board/game-board.component.html
@@ -27,7 +27,7 @@
 
     <button *ngIf="gameData.player !== gameData.lastPlayer" class="ic_button" (click)="nextPlayerRoll()">Next Player Roll</button>
 
-    <button *ngIf="data.playerCanRoll()" class="ic_button" (click)="roll()">
+    <button *ngIf="data.playerCanRoll()" class="ic_button" (click)="playerRoll()">
       <span *ngIf="gameData.skullIsland; else elseBlock">
         Roll for Skull Island
       </span>
