--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -36,9 +36,10 @@
     grid-row: 3;
     display: flex;
     gap: 1rem;
-    flex-wrap: wrap;
     justify-content: center;
-
+    button {
+      flex: 1 1 50%;
+    }
   }
   app-dice {
     flex: 1 1 25%;
