--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 
     <div class="init-ic__button">
       <button id="showpage--game" class="ic_button" (click)="initIC('game')">
-        Nueva partida
+        <span>Nueva partida</span>
       </button>
     </div>
   </section>
