--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -4,5 +4,7 @@
   <app-game-board [gameOn]="gameOn"></app-game-board>
 
   <div class="ic-button-start">
-    <button *ngIf="!gameOn && playersData.length > 1" (click)="setGameOn(true)" class="ic_button">Empezar partida</button>
+    <button *ngIf="!gameOn && playersData.length > 1" (click)="setGameOn(true)" class="ic_button">
+      <span>Empezar partida</span>
+    </button>
   </div>
