--- a/src/app/dice/dice.component.html
+++ b/src/app/dice/dice.component.html
@@ -1,3 +1,3 @@
-<div [ngClass]="currentDice.class">
+<div [ngClass]="currentDice.class" [id]="id">
   <img [src]="currentDice.face" [alt]="currentDice.name">
 </div>
