Minor style changes

--- a/src/app/add-players/add-players.component.html
+++ b/src/app/add-players/add-players.component.html
@@ -1,7 +1,7 @@
 <div class="ic-add-player">
     <label class="add-player__label" for="name">Añadir jugador/a</label>
     <input class="add-player__input" type="text" [(ngModel)]='newName'>
-    <button class="add-player__button" (click)="addPlayer(newName)">
+    <button class="ic_button add-player__button" (click)="addPlayer(newName)">
       <span>Añadir</span>
     </button>
 </div>
