--- a/src/app/dice/dice.component.scss
+++ b/src/app/dice/dice.component.scss
@@ -5,6 +5,7 @@
   padding: 1rem;
   border: 1px solid lightgrey;
   border-radius: 4px;
+  cursor: pointer;
 
   &.locked {
     background-color: lightgreen;
