--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,8 @@
   height: 120px;
   background-color: transparent;
   border: 0;
+  cursor: pointer;
+
   & > span {
     display: block;
     padding: 2rem;
