--- a/src/app/add-players/add-players.component.scss
+++ b/src/app/add-players/add-players.component.scss
@@ -1,5 +1,7 @@
 .ic-add-player {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 2rem;
   width: 600px;
   max-width: 100%;
@@ -7,8 +9,7 @@
 }
 .add-player {
     &__label,
-    &__input,
-    &__button {
+    &__input {
         display: block;
         margin-bottom: 1rem;
         width: 100%;
@@ -27,12 +28,5 @@
             outline: 0;
             background-color: rgba(100,100,100,.05);
         }
-    }
-    &__button {
-        padding: .5rem 1.5rem;
-        font-weight: 600;
-        background-color: lightcyan;
-        border: 1px solid lightslategray;
-        border-radius: .5rem;
     }
 }
