--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@
 .ic_button {
   display: block;
   width: 300px;
+  max-width: 80%;
   height: 120px;
   background-color: transparent;
   border: 0;
