--- a/src/app/add-players/add-players.component.scss
+++ b/src/app/add-players/add-players.component.scss
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 2rem;
   width: 600px;
-  max-width: 100%;
+  max-width: 100vw;
   background-color: rgba(200,200,200,.1);
 }
 .add-player {
