--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,7 +7,8 @@ main {
   height: 100%;
 }
 
-.init-ic {
+.init-ic,
+.init-ic__button {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -18,6 +19,7 @@ main {
 .ic__content {
   display: block;
   width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
