--- a/src/app/add-players/add-players.component.scss
+++ b/src/app/add-players/add-players.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem;
+  padding: 1rem 2rem;
   width: 600px;
   max-width: 100vw;
   background-color: rgba(200,200,200,.1);
