--- a/src/app/card/card.component.scss
+++ b/src/app/card/card.component.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
+  margin-top: .5rem;
   margin-bottom: 1rem;
 }
 .card {
