--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -1,11 +1,11 @@
 .game-board {
   display: grid;
-  grid-template-columns: 30% 70%;
+  grid-template-columns: 40% 60%;
   grid-template-rows: auto;
   padding: 5vh 5vw;
-  padding: 2rem;
-  width: 800px;
-  max-width: 100%;
+  padding: 1rem 2rem;
+  width: 600px;
+  max-width: 100vw;
 
   &--off {
     .game-board__points {
@@ -20,15 +20,16 @@
   }
   &__cards {
     grid-column:1;
-    grid-row: 2;
+    grid-row: 2 / span 2;
   }
   &__dice {
     grid-column:2;
     grid-row: 2;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-content: center;
-    gap: 5%;
+    gap: .5rem;
     padding: 1rem;
   }
   &__actions {
@@ -46,8 +47,22 @@
     grid-row: 4;
   }
   app-dice {
-    flex: 1 1 25%;
-    max-width: calc(25% - 5%);
+    flex: 1 1 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    max-width: calc(50% - .5rem);
   }
 }
 
+@media (min-width: 600px) {
+  .game-board {
+    grid-template-columns: 30% 70%;
+    app-dice {
+      flex-basis: 25%;
+      max-width: calc(25% - .5rem);
+    }
+  }
+}
