--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -1,6 +1,6 @@
 .game-board {
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   padding: 5vh 5vw;
   padding: 1rem 2rem;
@@ -19,12 +19,12 @@
     margin-bottom: 1rem;
   }
   &__cards {
-    grid-column:1;
-    grid-row: 2 / span 2;
+    grid-column: 1 / span 2;
+    grid-row: 2;
   }
   &__dice {
-    grid-column:2;
-    grid-row: 2;
+    grid-column: 1 / span 2;
+    grid-row: 3;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -33,8 +33,8 @@
     padding: 1rem;
   }
   &__actions {
-    grid-column: 2;
-    grid-row: 3;
+    grid-column: 1 / span 2;
+    grid-row: 4;
     display: flex;
     gap: 1rem;
     justify-content: center;
@@ -46,14 +46,19 @@
     grid-column: 2;
     grid-row: 4;
   }
+  &__rounds {
+    grid-column: 1 / span 2;
+    grid-row: 5;
+  }
+
   app-dice {
-    flex: 1 1 50%;
+    flex: 1 1 33%;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 80px;
     height: 80px;
-    max-width: calc(50% - .5rem);
+    max-width: calc(33% - .5rem);
   }
 }
 
