--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,8 +18,8 @@
   & > span {
     display: block;
     padding: 1rem 2rem;
-    font-size: 1.2rem;
-    white-space: nowrap;
+    font-size: 1rem;
+    white-space: normal;
     background-color: lightblue;
     border: 1px solid lightblue;
     border-radius: .5rem;
@@ -32,6 +32,14 @@
     }
     &.danger {
       background-color: lightcoral;
+    }
+  }
+}
+
+@media (min-width: 600px ) {
+  .ic_button {
+    & > span {
+     font-size: 1.2rem;
     }
   }
 }
