--- a/src/app/dice/dice.component.scss
+++ b/src/app/dice/dice.component.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   padding: .25rem;
+  width: 100%;
   border: 1px solid lightgrey;
   border-radius: 4px;
   cursor: pointer;
