--- a/src/app/game-board/game-board.component.scss
+++ b/src/app/game-board/game-board.component.scss
@@ -2,8 +2,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
-  padding: 5vh 5vw;
-  padding: 1rem 2rem;
+  padding: 2rem 1rem;
   width: 600px;
   max-width: 100vw;
 
@@ -29,8 +28,8 @@
     flex-wrap: wrap;
     justify-content: center;
     align-content: center;
-    gap: .5rem;
-    padding: 1rem;
+    gap: .25rem;
+    padding: 1rem .25rem;
   }
   &__actions {
     grid-column: 1 / span 2;
@@ -49,25 +48,34 @@
   &__rounds {
     grid-column: 1 / span 2;
     grid-row: 5;
+    margin-top: 1rem;
+    padding: 1rem;
   }
 
   app-dice {
-    flex: 1 1 33%;
+    flex: 1 1 25%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    width: 80px;
-    height: 80px;
-    max-width: calc(33% - .5rem);
+    width: 70px;
+    height: 70px;
+    max-width: calc(25% - .5rem);
   }
 }
 
 @media (min-width: 600px) {
   .game-board {
+    padding: 2rem;
     grid-template-columns: 30% 70%;
-    app-dice {
-      flex-basis: 25%;
-      max-width: calc(25% - .5rem);
+
+    &__dice {
+      gap: .5rem;
+      padding: 1rem;
     }
+  }
+  app-dice {
+    width: 80px;
+    height: 80px;
   }
 }
