--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,28 @@
 main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   min-height: 100vh;
   height: 100%;
+}
+
+.main-nav {
+  display: block;
+  width: 100%;
+  
+  ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+  a {
+    display: block;
+    padding: 1rem;
+  }
+
 }
 
 .init-ic,
@@ -23,9 +41,5 @@ main {
   height: 100%;
 }
 
-app-game {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+
 
