--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,3 +44,11 @@
     }
   }
 }
+
+app-game,
+app-info {
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
